added jv-stream-github-practice solution 2